feat: add top scores func and keydown event

--- a/raindrops/index.html
+++ b/raindrops/index.html
@@ -40,6 +40,7 @@
                     <div class="playing-field__wave-two wave"></div>
                     <div class="playing-field__wave-three wave"></div>
                 </div>
+                <div class="game__game-over">game over!!!</div>
             </div>
             <div class="game__keyboard-field keyboard-field">      
                 <div class="keyboard-field__keyboard keyboard">
@@ -121,12 +122,30 @@
                         <span class="window-end__score-text">your score:</span>
                         <span class="window-end__score-number">456</span>
                     </div>
+                    <div class="window-end__score-best score-best">
+                        <div class="score-best__title">your top scores:</div>
+                        <ol class="score-best__list">
+                            <!-- <li class="score-best__item">
+                                <span class="score-best__score">33433</span>
+                                <span class="score-best__date">29.05.1992</span>
+                            </li>
+                            <li class="score-best__item">
+                                <span class="score-best__score">3333</span>
+                                <span class="score-best__date">29.05.1992</span>
+                            </li>
+                            <li class="score-best__item">
+                                <span class="score-best__score">333</span>
+                                <span class="score-best__date">29.05.1992</span>
+                            </li> -->
+                        </ol>
+                    </div>
                     <div class="window-end__buttons">
                         <button class="window-end__button window-end__button-exit">exit</button>
                         <button class="window-end__button window-end__button-start">play again</button>
                     </div>
                 </div>
             </div>
+            
         </div>
     </main>
     <footer></footer>
