--- a/raindrops/index.html
+++ b/raindrops/index.html
@@ -13,8 +13,7 @@
         <h1 class="visually-hidden">Raindrops.</h1>
     </header>
     <main>
-        <div class="game game--start">
-            
+        <div class="game game--start">           
             <div class="game__playing-field playing-field">
                 <div class="playing-field__drops">
                     <!-- <div class="playing-field__drop drop drop--color_blue">
@@ -50,19 +49,19 @@
                         </form>
                     </div>
                     <div class="keyboard__buttons">
-                        <button class="keyboard__button button keyboard__button-number">7</button>
-                        <button class="keyboard__button button keyboard__button-number">8</button>
-                        <button class="keyboard__button button keyboard__button-number">9</button>
-                        <button class="keyboard__button button keyboard__button-operation button-operation--grid_clear button-operation--hover_red">clear</button>
-                        <button class="keyboard__button button keyboard__button-number">4</button>
-                        <button class="keyboard__button button keyboard__button-number">5</button>
-                        <button class="keyboard__button button keyboard__button-number">6</button>
-                        <button class="keyboard__button button keyboard__button-number">1</button>
-                        <button class="keyboard__button button keyboard__button-number">2</button>
-                        <button class="keyboard__button button keyboard__button-number">3</button>
-                        <button class="keyboard__button button keyboard__button-operation button-operation--grid_enter button-operation--hover_green">enter</button>
-                        <button class="keyboard__button button keyboard__button-number button-number--grid_zero">0</button>
-                        <button class="keyboard__button button keyboard__button-operation button-operation--hover_red">delete</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="7">7</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="8">8</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="9">9</button>
+                        <button class="keyboard__button keyboard__button-operation button-operation--grid_clear button-operation--hover_red" data-name="Delete">clear</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="4">4</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="5">5</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="6">6</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="1">1</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="2">2</button>
+                        <button class="keyboard__button keyboard__button-number" data-name="3">3</button>
+                        <button class="keyboard__button keyboard__button-operation button-operation--grid_enter button-operation--hover_green" data-name="Enter">enter</button>
+                        <button class="keyboard__button keyboard__button-number button-number--grid_zero" data-name="0">0</button>
+                        <button class="keyboard__button keyboard__button-operation button-operation--hover_red" data-name="Backspace">delete</button>
                     </div>
                 </div>
             </div>
