refactor: update script file

--- a/raindrops/index.html
+++ b/raindrops/index.html
@@ -110,8 +110,8 @@
                         <label for="scales">Scales</label>
                     </form> -->
                     <div class="window-start__buttons">
-                        <button class="window-start__button window-start__button-instruction">how to play</button>
-                        <button class="window-start__button window-start__button-start">play</button>
+                        <button class="window-start__button window-start__button-tutorial" data-mode="tutorial">how to play</button>
+                        <button class="window-start__button window-start__button-start" data-mode="game">play</button>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="window-end__buttons">
                         <button class="window-end__button window-end__button-exit">exit</button>
-                        <button class="window-end__button window-end__button-start">play again</button>
+                        <button class="window-end__button window-end__button-start" data-mode="game">play again</button>
                     </div>
                 </div>
             </div>
